Add inventory related data

--- a/Gui/Language/English/inventoryDescriptions.json
+++ b/Gui/Language/English/inventoryDescriptions.json
@@ -8,5 +8,15 @@
         "title": "Tool",
         "description": "Tool",
         "tags": []
+    },
+    "5b1cef4a-784b-4bb0-a876-60d56d928fdb": {
+        "title": "Backpack Shape",
+        "description": "Backpack Shape",
+        "tags": []
+    },
+    "b1953d36-6868-4170-a7fd-861628c6eac1": {
+        "title": "Backpack",
+        "description": "Backpack",
+        "tags": []
     }
 }
